.k8s/nodesample-nodeapp-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: nodesample-nodeapp-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/nodesample-nodeapp-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/nodesample-nodeapp-network: "true"
